// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/Neucloud/Detail/component render 1`] = `
<div
  style={
    Object {
      "paddingTop": "25vh",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <NoData />
  <br />
  <WithStyles(Component)
    variant="h5"
  >
    Data not found
  </WithStyles(Component)>
  <Memo(Connect(WithStyles(Component)))
    content=""
    onClose={[Function]}
    success={true}
  />
</div>
`;

exports[`src/containers/ServiceAssurance/Neucloud/Detail/component render 2 1`] = `
<div
  style={
    Object {
      "paddingTop": "25vh",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <NoData />
  <br />
  <WithStyles(Component)
    variant="h5"
  >
    Data not found
  </WithStyles(Component)>
  <Memo(Connect(WithStyles(Component)))
    content=""
    onClose={[Function]}
    success={true}
  />
</div>
`;

exports[`src/containers/ServiceAssurance/Neucloud/Detail/component render isLoading 1`] = `
<div
  style={
    Object {
      "paddingTop": "30vh",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(CircularProgress))
    style={
      Object {
        "color": "#DE1B1B",
      }
    }
  />
</div>
`;
